bug: fix title spacing on forms

--- a/src/meal-ui/src/styles/local/partials/1-elements/titles.css
+++ b/src/meal-ui/src/styles/local/partials/1-elements/titles.css
@@ -1,4 +1,5 @@
 h2.title {
+    width: 100%;
     font-size: 1.8em;
     letter-spacing: 3px;
     color: white;
